# deepseek-cc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.json  pyproject.toml
app/: __init__.py  config.py  main.py
app/routes/: messages.py
app/services/: proxy.py  request_logging.py  transcript.py
app/storage/: sqlite.py
scripts/: start-proxy-docker.sh  start-proxy.ps1  start-proxy.sh
tests/: conftest.py  test_messages_proxy.py  test_passthrough_endpoints.py  test_proxy_headers.py  test_request_logging.py  test_storage_sqlite.py  test_streaming_accumulator.py  test_transcript_repair.py
